<resources>
    <string name="app_name">SmartMenuFood</string>
    <string name="title_home">Home</string>
    <string name="title_menu">Menu</string>
    <string name="title_food">Recetas</string>
    <string name="title_smart_menu">Smart Menu</string>
    <string name="title_favorite">Favoritos</string>
    <string name="title_cart">Pedir</string>
    <string name="type_recipe">Escriba una receta</string>
    <string name="popular_categories">Categorías populares</string>
    <string name="see_all">Ver todos</string>
    <string name="hello">Hola, </string>
    <string name="user_name">username</string>
    <string name="expertRecet">Recetas de experto</string>
    <string name="category">categorias</string>
    <string name="recomendRecet">Recetas Recomendadas</string>
    <string name="authorusername">authorusername</string>
    <string name="meals_category_filter">Platos por categoria</string>
    <string name="no_recipes_found">No se encontraron recetas</string>
    <string name="lasagna">Lasagna</string>
    <string name="reccete_type">Tipos de recetas</string>
    <string name="ingredients">Ingredientes</string>
    <string name="instructions">Instrucciones</string>
    <string name="instructions_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lobortis nulla et tortor vehicula pharetra. Nam justo metus, interdum a aliquet in, convallis vitae sem. Pellentesque mollis arcu quis ligula tempor tincidunt. Curabitur tincidunt mi eget magna varius aliquam. Nullam finibus volutpat ipsum eu iaculis. Duis felis lorem, suscipit vitae mattis at, facilisis eget ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean efficitur lacus elit, ac semper augue rhoncus non. Nullam libero turpis, facilisis ut interdum porta, dapibus sed dui. Nullam magna tellus, ullamcorper eu nunc id, molestie maximus nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus et imperdiet mi, in luctus metus. Nam vitae placerat turpis. Curabitur sit amet efficitur magna. Suspendisse consequat nec erat ut pharetra.</string>
    <string name="profileimage">imagenperfil</string>
    <string name="quote">No se te olvide tomar agua</string>
    <string name="upvote_number">boto_positivo</string>
    <string name="commentTitle">Comentario</string>
    <string name="comment">Comentar</string>
    <string name="dateComment">FechaComentario</string>
    <string name="my_recipe">Mi receta</string>
    <string name="recetteFormTitle">Recetas</string>
    <string name="titreRecetteInput">Ingresa el titulo de la receta</string>
    <string name="dureeRecetteInput">Duración de la receta</string>
    <string name="personRecetteInput">Numero de personas</string>
    <string name="difficultyRecetteInput">Dificultad de la receta</string>
    <string name="selectCategory">Seleccione una categoría</string>
    <string name="bioRecetteInput">Es tu receta Vegetariana ?</string>
    <string name="Mesure">Medida</string>
    <string name="MeasureTxt">Medida</string>
    <string name="recetteFormEditTitle">Editar Receta</string>
    <string name="descRecetteInput">Especifica una descripción para tu receta</string>
    <string name="modifier">Modificar</string>
    <string name="commentTitleEdit">Editar comentario</string>
    <string name="TitleGuide">Bienvenidos a SmartMenu</string>
    <string name="DescGuide">Este es un recorrido por la aplicación</string>
    <string name="nextBtn">Siguiente</string>
    <string name="SkipBtn">Saltar</string>
    <string name="about">Sobre la app</string>
    <string name="about_description">Selecciona tus ingredientes y busca que te proponen los restaurantes</string>
    <string name="loading_text">Cargando</string>
    <string name="search_food">Buscar Receta</string>
    <string name="ingredient_name">Nombre del Ingrediente</string>
    <string name="expertRecette">Receta de un Experto</string>
    <string name="recomnandedRecette">Receta recomendada</string>
    <string name="search">Buscar</string>
    <string name="food_toobar_title">food_toobar_title</string>
    <string name="no_ingredients_in_basket">No hay ingredientes en la canasta</string>
    <string name="ingredients_basket">Lista de ingredientes</string>
    <string name="clear_cart">Limpiart Carrito</string>
    <string name="no_ingredients_found">No se encontró el ingrediente</string>
    <string name="add_ingredients">Agregar ingredientes</string>
    <string name="create_reccete">Crear recetas</string>
    <string name="process_ingredients">Procesar ingredientes</string>
    <string name="certificateReccette">Receta certificada</string>
    <string name="reccette_expert">Receta</string>
    <string name="add">Agregar</string>
    <string name="submit">Terminar</string>
    <string name="restaurantRecette">Receta de un restaurante</string>
    <string name="recetteUser">Receta de un usuario</string>
    <string name="emailusertxt">Email</string>
    <string name="PasswordTxt">Password</string>
    <string name="loginTxt">Login</string>
    <string name="registerTV">Registrar</string>
    <string name="todo">Registro</string>
    <string name="UsernameTXT">Usuario</string>
    <string name="RepeatPasswordTxt">Repetir password</string>
    <string name="EmailTxt">Email</string>
    <string name="PhoneTxt">Teléfono</string>
    <string name="create_accountBtn">Crear cuenta</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="already_account">Ya tienes una cuenta</string>
    <string name="accueilTxt">Feed</string>
    <string name="healthy_mode">Modo Saludable</string>
    <string name="veganRecette">Recetas Veganas</string>
    <string name="salade">Ensaladas</string>
    <string name="forget_password_text">Olvide mi contraseña</string>
    <string name="recovery_pass">Recuperar contraseña</string>
</resources>