<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_menu" />

    <item
        android:id="@+id/navigation_smartmenu"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_smart_menu" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_cart" />

</menu>